core/src/test/resources/de/uni_luebeck/isp/tessla/core/errors/undefined-members.tessla
def o := {x = 32, y = 42}
out o.z